--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -92,138 +92,25 @@ endblock %} {% block body %}
             </div>
             <div class="grid">
                 <div class="grid-sizer"></div>
-                <a href="#">
+                {% for derecho in derechos %}
+                <a href="{{ urlFor('shwDocumen') urlFor('shwDerecho', {'idDer': derecho.contenible_id}) }}">
                     <div class="grid-item">
                         <figure class="cap-bot">
                             <div class="text-center">
-                                <h4 class="">Derecho a vivir en paz</h4>
-                                <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                                <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
+                                <h4 class="">{{ derecho.titulo }}/h4>
+                                {% set numComents = 0 %}
+                                {% for seccion in derecho.secciones %}
+                                {% set numComents = numComents + seccion.comentarios|length %}
+                                {% endfor %}
+                                <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> {{ numComents }}</div>
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                                magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
+                                Haga clic para saber mas del derecho.
                             </figcaption>
                         </figure>
                     </div>
                 </a>
-                <div class="grid-item grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="grid-item">
-                    <figure class="cap-bot">
-                        <div class="text-center">
-                            <h4 class="">Derecho a vivir en paz</h4>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                            <div class="btn btn-xs btn-default"><i class="mdi mdi-comment-multiple-outline"></i> 3</div>
-                        </div>
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae nostrum, dolore quidem qui. Qui possimus nemo quibusdam distinctio
-                            magni nobis quisquam facere. Eos, iusto, dignissimos vitae aspernatur tempore alias suscipit.
-                        </figcaption>
-                    </figure>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
