--- a/views/lpe/registro/recuperar-clave.twig
+++ b/views/lpe/registro/recuperar-clave.twig
@@ -1,43 +1,22 @@
-{# VARIBLES #}
-{% set footer = false %}
-{% set barraNav = false %}
-{% set notificaciones = false %}
-{% set html_class = 'verif-exito-bg' %}
-{% set body_class = 'no-body-bg' %}
-
-{% extends "master.twig" %}
-
-{# ----------------------------------------------------------- #}
-{% block titulo %}Revise su correo{% endblock %}
-{# ----------------------------------------------------------- #}
-{% block linkhead %}{% endblock %}
-{# ----------------------------------------------------------- #}
+{% extends "lpe/master.twig" %} 
+{# ----------------------------------------------------------- #} 
+{% block titulo %}Recuperar contraseña{% endblock %} 
 {% block body %}
 
-<div class="registro row">
-	<div class="medium-8 medium-centered columns no-padding-small-only">
-		<div class="panel text-center">
-			<div class="row">
-				<div class="small-12 columns">
-					<h1><i class="fa fa-envelope fa-fw fa-lg" style="color: #383838"></i></h1>
-					<h5 class="seccion"><b>Revisá tu casilla</b></h5>
-					<hr>
-                    <div class="descripcion">
-						Te hemos enviado por email un link para que reincies tu contraseña.
-						Recordá que este link expira en una hora. En caso de no utilizarlo,
-						siempre podés generar otro desde la opción de recuperar contraseña.
-					</div>
-					<br>
-					<a href="{{ urlFor('shwPortal') }}" class="button large negative radius"><i class="fa fa-sign-in fa-fw"></i> Volver a virtuágora</a>
-				</div>
-			</div>
+<div class="container">
+	<div class="row">
+		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
+			<h2><strong>Revise tu casilla</strong></h2>
+			<p>Le hemos enviado a su email un link para que reincie tu contraseña.
+						Recuerde que este link expira en una hora. En caso de no utilizarlo,
+						siempre podrá generar otra desde la opción de recuperar contraseña.</p>
+						<a href="{{ urlFor('shwPortal') }}" class="btn btn-link">Volver</a>
 		</div>
 	</div>
 </div>
 
+{% endblock %} 
+{# ----------------------------------------------------------- #} 
+{% block scripts %}
+
 {% endblock %}
-{# ----------------------------------------------------------- #}
-{% block modals %}{% endblock %}
-{# ----------------------------------------------------------- #}
-{% block scripts %}{% endblock %}
-{# ----------------------------------------------------------- #}
