--- a/views/lpe/registro/registro.twig
+++ b/views/lpe/registro/registro.twig
@@ -1,106 +1,74 @@
-{# VARIBLES #}
-{% set footer = false %}
-{% set barraNav = false %}
-{% set notificaciones = false %}
-{% set html_class = 'registro-bg' %}
-{% set body_class = 'no-body-bg' %}
+{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Login{%
+endblock %} {% block body %}
 
-{% extends "master.twig" %}
+<div class="container">
+    <div class="row">
+        <div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
+            <h2><strong>Registro</strong></h2>
+            <p>En caso que ya tenga una cuenta, <a href="{{ urlFor('shwLogin') }}"><i class="fa fa-sign-in fa-fw"></i> Inicie Sesión</a></p>
+            <div class="well well-lg">
+                <form action="{{ urlFor('runCrearUsuario') }}" method="POST" class="form-horizontal" data-toggle="validator">
+                    <fieldset>
+                        <div class="form-group">
+                            <label for="inputEmail" class="col-md-2 control-label">Nombre</label>
+                            <div class="col-md-10">
+                                <input name="nombre" type="text"  data-error="Complete el campo con un nombre valido" pattern="^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$ placeholder="Escriba aquí su nombre" id="inputNombre" class="form-control" required>
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail" class="col-md-2 control-label">Apellido</label>
+                            <div class="col-md-10">
+                                <input name="apellido" type="text"  data-error="Complete el campo con un apellido valido" pattern="^^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$" placeholder="Escriba aquí su apellido" id="inputApellido" class="form-control" required>
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail" class="col-md-2 control-label">Email</label>
+                            <div class="col-md-10">
+                                <input name="email" type="email"  data-error="Complete el campo con un email valido" pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?" placeholder="Escriba aquí su email" id="inputEmail" class="form-control" required>
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword" class="col-md-2 control-label">Contraseña</label>
+                            <div class="col-md-10">
+                                <input name="password" type="password" placeholder="Escriba aquí su contraseña" id="inputPassword" class="form-control" data-error="Complete el campo con una contraseña" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label"></label>
+                            <div class="col-md-10">
+                                <input name="password2" type="password" placeholder="Reingrese su contraseña" class="form-control" data-match="#inputPassword"  data-error="Reingrese la contraseña que ha ingresado en el campo anterior" data-match-error="Las contraseñas no son iguales. Revisé" required>
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail" class="col-md-2 control-label">CAPTCHA</label>
+                            <div class="col-md-10">
+                                <img src="{{ urlFor('shwCaptcha') }}?_={{ date().timestamp }}">
+                                <input type="textfield" name="captcha" class="form-control" placeholder="Ingrese el código" required>
+                            </div>
+                        </div>
+                        <div class="form-group text-justify">
+                            <div class="col-md-12">
+                                Al hacer clic en <b>Registrarse</b>, usted acepta los
+                                <a href="{{ urlFor('shwTos') }}"><i class="fa fa-file-text-o fa-fw"></i> Terminos y Condiciones de uso</a>                                y confirma que ha leído nuestra Política de uso de datos, incluido el uso de cookies.
+                            </div>
+                        </div>
+                    </fieldset> 
+                </form>
+                <div class="text-center">
+                    <a href="{{ urlFor('shwPortal') }}" class="btn btn-link">Volver</a>
+                    <button type="submit" class="btn btn-primary">Registrarse <i class="zmdi zmdi-account-add zmdi-hc-lg zmdi-hc-fw"></i></button>
+                </div>
+            </div>
+        </div>
 
-{# ----------------------------------------------------------- #}
-{% block titulo %}Registrar nuevo usuario{% endblock %}
-{# ----------------------------------------------------------- #}
-{% block linkhead %}{% endblock %}
-{# ----------------------------------------------------------- #}
-{% block body %}
-
-<div class="registro usuario row">
-	<div class="medium-10 medium-centered columns no-padding-small-only">
-		<div class="panel text-center">
-			<div class="row">
-				<div class="small-12 columns">
-					<h1 class="seccion"><b>Registrarse</b></h1>
-					<div class="descripcion">
-						En caso que ya tenga una cuenta, <a href="{{ urlFor('shwLogin') }}"><i class="fa fa-sign-in fa-fw"></i> Inicie Sesión</a>
-					</div>
-					<hr>
-				</div>
-			</div>
-			<div class="row">
-				<div class="small-11 small-centered columns">
-					<form data-abide action="{{ urlFor('runCrearUsuario') }}" method="POST">
-						<div class="row collapse">
-							<div class="small-12 medium-12 large-6 columns">
-								<input name="nombre" type="text" placeholder="Nombres (2 máx.)" required pattern="nombre">
-								<small class="error text-center">Obligatorio. Hasta 2 nombres</small>
-							</div>
-							<div class="small-12 medium-12 large-6 columns">
-								<input name="apellido" type="text" placeholder="Apellido" required pattern="apellido">
-								<small class="error text-center">Obligatorio. Hasta un apellido</small>
-							</div>
-							<div class="small-12 columns">
-								<input name="email" type="email" placeholder="Email" required pattern="email">
-								<small class="error text-center">Obligatorio. Debe ser una dirección bien formada</small>
-							</div>
-							<div class="small-12 columns">
-								<input id="password" name="password" type="password" placeholder="Contraseña">
-								<small class="error text-center">Obligatorio</small>
-							</div>
-							<div class="small-12 columns">
-								<small class="error text-center">Las contraseñas no coinciden</small>
-								<input type="password" name="password2" placeholder="Reingrese su contraseña" data-equalto="password">
-							</div>
-                            <div class="small-12 columns">
-                            	<div class="captcha-cont">
-								<img src="{{ urlFor('shwCaptcha') }}?_={{ date().timestamp }}"><input type="textfield" name="captcha" placeholder="Ingrese el código">
-								</div>
-							</div>
-							<div class="small-12 columns text-center">
-								<div class="descripcion" style="margin: 10px 0 10px;">
-									Al hacer clic en <b>Registrarse</b>, usted acepta los <a href="{{ urlFor('shwTos') }}"><i class="fa fa-file-text-o fa-fw"></i> Terminos y Condiciones de uso</a> y confirma que ha leído nuestra Política de uso de datos, incluido el uso de cookies.
-								</div>
-								<button class="button success radius large expand"><i class="fa fa-check fa-fw fa-lg"></i> Registrarse</button>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
+    </div>
 </div>
 
-{% endblock %}
-{# ----------------------------------------------------------- #}
-{% block modals %}{% endblock %}
-{# ----------------------------------------------------------- #}
+{% endblock %} {# ----------------------------------------------------------- #} 
 {% block scripts %}
-<script src="{{ baseUrl() }}/assets/js/foundation/foundation.abide.js"></script>
-<script>
-	$(document).ready(function() {
-		if (window.location.hash) {
-			var array = window.location.hash.substring(1).split('&');
-			$('input[name="nombre"]').val(array[0]);
-			$('input[name="apellido"]').val(array[1]);
-			$('input[name="email"]').val(decodeURIComponent(array[2]));
-		}
-	});
-
-	$(document).foundation({
-		abide : {
-			patterns: {
-				nombre: /(^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$)/,
-				apellido: /(^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$)/,
-				//Email Validation as per RFC2822 standards.
-				email: /[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/
-			}
-		}
-	});
-
-	$('form').on('invalid.fndtn.abide', function () {
-		var invalid_fields = $(this).find('[data-invalid]');
-		console.log(invalid_fields[0]);
-	})
-
-</script>
-{% endblock %}
-{# ----------------------------------------------------------- #}
+<script src="{{ baseUrl() }}/assets-lpe/js/validator.min.js"></script>
+ {% endblock %}
