--- a/views/lpe/registro/reiniciar-completo.twig
+++ b/views/lpe/registro/reiniciar-completo.twig
@@ -1,37 +1,20 @@
-{# VARIBLES #}
-{% set footer = false %}
-{% set barraNav = false %}
-{% set notificaciones = false %}
-{% set html_class = 'verif-exito-bg' %}
-{% set body_class = 'no-body-bg' %}
-
-{% extends "master.twig" %}
-
-{# ----------------------------------------------------------- #}
-{% block titulo %}¡Contraseña reiniciada!{% endblock %}
-{# ----------------------------------------------------------- #}
-{% block linkhead %}{% endblock %}
-{# ----------------------------------------------------------- #}
+{% extends "lpe/master.twig" %} 
+{# ----------------------------------------------------------- #} 
+{% block titulo %}Contraseña reiniciada{% endblock %} 
 {% block body %}
 
-<div class="registro row">
-	<div class="medium-8 medium-centered columns no-padding-small-only">
-		<div class="panel text-center">
-			<div class="row">
-				<div class="small-12 columns">
-					<h1><i class="fa fa-check fa-fw fa-lg" style="color: #61bf26"></i></h1>
-					<h5 class="seccion"><b>Tu contraseña fue reiniciada</b></h5>
-					<hr>
-					<a href="{{ urlFor('shwLogin') }}" class="button large negative radius"><i class="fa fa-sign-in fa-fw"></i>Iniciar sesión</a>
-				</div>
-			</div>
+<div class="container">
+	<div class="row">
+		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
+			<h2><strong>Tu contraseña fue reiniciada</strong></h2>
+			<p>Puede volver a la plataforma iniciando sesión con su nueva contraseña.</p>
+			<a href="{{ urlFor('shwLogin') }}" class="btn btn-primary">Iniciar sesión</a>
 		</div>
 	</div>
 </div>
 
+{% endblock %} 
+{# ----------------------------------------------------------- #} 
+{% block scripts %}
+
 {% endblock %}
-{# ----------------------------------------------------------- #}
-{% block modals %}{% endblock %}
-{# ----------------------------------------------------------- #}
-{% block scripts %}{% endblock %}
-{# ----------------------------------------------------------- #}
