--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -93,7 +93,7 @@ endblock %} {% block body %}
             <div class="grid">
                 <div class="grid-sizer"></div>
                 {% for derecho in derechos %}
-                <a href="{{ urlFor('shwDocumen') urlFor('shwDerecho', {'idDer': derecho.contenible_id}) }}">
+                <a href="">
                     <div class="grid-item">
                         <figure class="cap-bot">
                             <div class="text-center">
